tests/ui/type_checker/ok/structs.aru
struct Point {
    x: int
    y: int
}

func main() {
    let p: Point = Point { x: 1, y: 2 }
}
