tests/ui/type_checker/invalid/nullable_assign.aru
func main(): int {
    let x: int? = nil
    let y: int = x
    return y
}
